--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "accepts": "^1.2.13",
     "array-flatten": "^1.1.1",
+    "bluebird": "^2.10.2",
     "body-parser": "^1.14.1",
     "content-disposition": "^0.5.0",
     "content-type": "^1.0.1",
@@ -53,8 +54,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e js,css,scss,html app.js"
+    "start": "nodemon -e js,css,scss,html app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
