--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon -e js,css,scss,html app.js",
+    "start": "nodemon -e js,css,html app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
